gccida/g1/c_alignof_expr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof_expr/src/c-common.c:2905:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof_expr/src/c-common.c:2906:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof_expr/src/c-common.c:2923:19: error: expected expression
v6 = ( tree_node *)*( &global_trees + 16); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof_expr/src/c-common.c:2923:8: error: use of undeclared identifier 'tree_node'
v6 = ( tree_node *)*( &global_trees + 16); 
       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof_expr/src/obj/c-common.o] Error 1
